# discord-roulette-bot

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.githooks/: commit-msg
.gitlab/issue_templates/: bug_fix.md  feature_request.md
.gitlab/merge_request_templates/: feature_mr.md
api/admin/: main.py
api/admin/src/utils/: logger.py
api/players/: main.py
api/players/src/repo/conn/: sql.py
api/players/src/repo/db/: users.py
api/players/src/routers/: health.py  users.py
api/players/src/routers/responses/: __init__.py  base.py  errors.py  systemcodes.py  users_response.py  utils.py
api/players/src/services/: users.py
api/players/tests/: conftest.py
api/players/tests/services/: mock_user.py  test_user.py
environments/dev/: Dockerfile.admin  Dockerfile.player  Dockerfile.players  Dockerfile.setup  log_conf.yaml  pgadmin.json
environments/prod/: Dockerfile.player
githooks/: commit-msg  pre-push
k8s/dev/: config.yml  deployment.yml  secrets.yml
migrations/: env.py
migrations/versions/: 395483af9a87_create_user_table.py
src/api/admin/: main.py
src/api/admin/src/routers/: __init__.py  health.py
src/api/players/: main.py
src/api/players/src/repo/conn/: __init__.py  sql.py
src/api/players/src/repo/db/: users.py
src/api/players/src/routers/: users.py
src/api/players/src/services/: users.py
src/api/players/tests/: conftest.py
src/api/players/tests/services/: test_user.py
src/api/repo/conn/: __init__.py  sql.py
src/api/repo/db/: psql_conn.py  users.py
src/api/routers/: __init__.py  health.py  users.py
src/api/services/: users.py
