[tool.poetry]
name = "discord-roulette-bot"
version = "0.1.0"
description = "Discord bot for playing russian roulette."
authors = ["Héctor Mauricio de la Rosa Prado <hoftherose@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"

[tool.poetry.group.lint.dependencies]
black = {version = "^24.2.0", optional = true}

[tool.poetry.group.test.dependencies]
pytest = {version = "^8.0.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
